fix the overlay with z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ img{
         transform: scale(1.3, 1.3);
         rotate: 10deg;
         box-shadow: 20px 20px 10px rgba(128, 128, 128, 0.7);
+        z-index: 2;
         .cork{
             display: none;
         }
